# 2-wire-protocol

./: .gitignore  CMakeLists.txt  README.md
includes/: connection.h  data_link.h  packets.h  statuses.h
src/: connection.c  connection.h  data_link.c  main.c  packets.h  statuses.h
tests/: connection_test.c  data_link_tests.c  test_data_link.c  test_example.c
